--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Segoe UI, Arial, sans-serif;
+  font-family: Inter, Arial, sans-serif;
   margin: 0;
   padding: 0;
   background-color: #f4f6f8;
@@ -151,4 +151,16 @@ h3 {
   .chat-area {
     height: auto;
   }
+}
+
+*::-webkit-scrollbar {
+  display: none;
+}
+
+* {
+  scrollbar-width: none;
+}
+
+* {
+  -ms-overflow-style: none;
 }
